# hermes1d-llnl

./: CMakeLists.txt
examples/dirac/: CMakeLists.txt  main.cpp  plot.py
examples/schroedinger/: CMakeLists.txt  _forms.pxd  _forms.pyx  convergence_graphs.py  convergence_graphs2.py  forms.cpp  forms.h  main.cpp  s.py  schroedinger.py
examples/schroedinger/graphs/: hydrogen_certik_hp_lowest_R.py  hydrogen_hpfem.py  hydrogen_pfem.py  hydrogen_pfem_uniform_init.py  hydrogen_romanowski.py  plot.py  plot_hydrogen.py  plot_silver.py  silver_hpfem.py  silver_pfem.py  silver_uniformpfem4.py  silver_uniformpfem50.py  utils.py
hermes1d/fekete/: _fekete.pxd  _fekete.pyx  fekete.py  hydrogen.py  opt.py
hermes1d/fekete/tests/: test_fekete.py
hermes1d/h1d_wrapper/: h1d_wrapper.pxd  h1d_wrapper.pyx  hermes1d.pxd  math.pxd
hermes1d/solvers/: eigen.py
hermes1d/tests/: test_projections.py
hermes_common/: _hermes_common.cpp  _hermes_common.pxd  solvers.cpp
hermes_common/cmake/: FindNumPy.cmake  UseCython.cmake
python/hermes1d/: __init__.py  _hermes1d.pxd  _hermes1d.pyx
python/hermes1d/h1d_wrapper/: _hermes1d.pxd  _hermes1d.pyx
src/: adapt.cpp  adapt.h  common.h  discrete.cpp  mesh.cpp  mesh.h  projection.cpp  projection.h
